// Vitest Snapshot v1

exports[`plugins/check-syntax > should add check-syntax plugin properly 1`] = `
{
  "plugins": [
    CheckSyntaxPlugin {
      "ecmaVersion": 5,
      "errors": [],
      "exclude": undefined,
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  ],
}
`;

exports[`plugins/check-syntax > should not add check-syntax plugin when target node 1`] = `{}`;

exports[`plugins/check-syntax > should use default browserlist as targets when only set checksyntax.exclude 1`] = `
{
  "plugins": [
    CheckSyntaxPlugin {
      "ecmaVersion": 5,
      "errors": [],
      "exclude": [
        /\\$\\.html/,
      ],
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  ],
}
`;
